circt-bc260129-0000133d/origin/reproduce.log
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: Assertion failed: arr[0] != 1"
         ^
<stdin>:3:10: note: see current operation: %26 = "sim.fmt.literal"() <{literal = "Error: Assertion failed: arr[0] != 1"}> : () -> !sim.fstring
